test/nexj/invalidbase/channels/ErrorQueue.channel
<MessageQueue alias="NEXJ_ERROR" receive="false" broadcast="false" persistent="true" priority="4" ttl="0"/>
